--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,67 @@
-<?xml version="1.0" encoding="utf-8"?>
+
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="seed">#BF6B04</color>
+    <color name="md_theme_light_primary">#8F4E00</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#FFDCC1</color>
+    <color name="md_theme_light_onPrimaryContainer">#2E1500</color>
+    <color name="md_theme_light_secondary">#745943</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#FFDCC1</color>
+    <color name="md_theme_light_onSecondaryContainer">#2A1707</color>
+    <color name="md_theme_light_tertiary">#944A00</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#FFDCC6</color>
+    <color name="md_theme_light_onTertiaryContainer">#301400</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_background">#F8FDFF</color>
+    <color name="md_theme_light_onBackground">#001F25</color>
+    <color name="md_theme_light_surface">#F8FDFF</color>
+    <color name="md_theme_light_onSurface">#001F25</color>
+    <color name="md_theme_light_surfaceVariant">#F3DFD1</color>
+    <color name="md_theme_light_onSurfaceVariant">#51443B</color>
+    <color name="md_theme_light_outline">#837469</color>
+    <color name="md_theme_light_inverseOnSurface">#D6F6FF</color>
+    <color name="md_theme_light_inverseSurface">#00363F</color>
+    <color name="md_theme_light_inversePrimary">#FFB779</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_surfaceTint">#8F4E00</color>
+    <color name="md_theme_light_outlineVariant">#D6C3B6</color>
+    <color name="md_theme_light_scrim">#000000</color>
+    <color name="md_theme_dark_primary">#FFB779</color>
+    <color name="md_theme_dark_onPrimary">#4C2700</color>
+    <color name="md_theme_dark_primaryContainer">#6C3A00</color>
+    <color name="md_theme_dark_onPrimaryContainer">#FFDCC1</color>
+    <color name="md_theme_dark_secondary">#E3C0A5</color>
+    <color name="md_theme_dark_onSecondary">#412C19</color>
+    <color name="md_theme_dark_secondaryContainer">#5A422E</color>
+    <color name="md_theme_dark_onSecondaryContainer">#FFDCC1</color>
+    <color name="md_theme_dark_tertiary">#FFB784</color>
+    <color name="md_theme_dark_onTertiary">#4F2500</color>
+    <color name="md_theme_dark_tertiaryContainer">#713700</color>
+    <color name="md_theme_dark_onTertiaryContainer">#FFDCC6</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#001F25</color>
+    <color name="md_theme_dark_onBackground">#A6EEFF</color>
+    <color name="md_theme_dark_surface">#001F25</color>
+    <color name="md_theme_dark_onSurface">#A6EEFF</color>
+    <color name="md_theme_dark_surfaceVariant">#51443B</color>
+    <color name="md_theme_dark_onSurfaceVariant">#D6C3B6</color>
+    <color name="md_theme_dark_outline">#9E8E82</color>
+    <color name="md_theme_dark_inverseOnSurface">#001F25</color>
+    <color name="md_theme_dark_inverseSurface">#A6EEFF</color>
+    <color name="md_theme_dark_inversePrimary">#8F4E00</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_surfaceTint">#FFB779</color>
+    <color name="md_theme_dark_outlineVariant">#51443B</color>
+    <color name="md_theme_dark_scrim">#000000</color>
+    <color name="CustomColor1">#D99152</color>
+    <color name="CustomColor2">#A68A72</color>
+    <color name="CustomColor3">#A6988D</color>
 </resources>
